# openxrs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  azure-pipelines.yml  monado.nix  shell.nix
.github/: dependabot.yml
.github/workflows/: rust.yml
generator/: Cargo.toml  xr.xml
generator/src/: main.rs
openxr/: Cargo.toml
openxr/examples/: README.md  debug_pattern.frag  debug_pattern.frag.spv  fullscreen.vert  fullscreen.vert.spv  hello.rs  opengl_xlib.rs  transform.vert  transform.vert.spv  vulkan.rs  wgpu.rs
openxr/src/: action.rs  action_set.rs  composition_layers.rs  display_refresh_rate.rs  entry.rs  environment_depth.rs  face_tracker_android.rs  face_tracker_fb.rs  face_tracker_htc.rs  foveation_profile_fb.rs  frame_stream.rs  generated.rs  hand_tracker.rs  instance.rs  lib.rs  localization_map_ml.rs  passthrough.rs  recommended_layer_resolution_meta.rs  secondary_view.rs  session.rs  space.rs  swapchain.rs  vive_tracker_paths.rs
openxr/src/graphics/: android_opengles.rs  d3d.rs  headless.rs  metal.rs  mod.rs  opengl.rs  opengles.rs  vulkan.rs
static/: Cargo.toml  build.rs
sys/: Cargo.toml  README.md  bindgen.h  build.rs  generate.sh
sys/src/: generated.rs  lib.rs  loader.rs  mint_impls.rs  nalgebra.rs  platform.rs  support.rs
