[package]
name = "generator"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
publish = false

[dependencies]
xml = { package = "xml-rs", version = "0.8" }
quote = "0.6"
syn = { version = "0.15", default-features = false, features = ["derive", "printing"] }
proc-macro2 = "0.4"
heck = "0.3"
indexmap = "1"
