[package]
name = "generator"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
publish = false

[dependencies]
xml = { package = "xml-rs", version = "0.8" }
quote = "1.0"
syn = { version = "2.0.101", default-features = false, features = ["derive", "printing"] }
proc-macro2 = "1.0"
heck = "0.5"
indexmap = "2"
regex = "1.2.1"
