[package]
name = "openxr"
description = "High-level, mostly-safe OpenXR bindings"
repository = "https://github.com/Ralith/openxrs"
readme = "../README.md"
version = "0.2.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
categories = ["api-bindings", "rendering"]
keywords = ["openxr", "vr"]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[features]
static = ["sys/static", "linked"]
loaded = ["shared_library"]
linked = ["sys/prototypes"]
default = ["loaded"]

[dependencies]
sys = { package = "openxr-sys", path = "../sys", version = "0.2.0" }
shared_library = { version = "0.1.9", optional = true }
ash = "0.27"
void = "1"

[package.metadata.docs.rs]
features = ["linked", "loaded"]
