[package]
name = "openxr"
description = "High-level, mostly-safe OpenXR bindings"
repository = "https://github.com/Ralith/openxrs"
readme = "../README.md"
version = "0.7.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
categories = ["api-bindings", "rendering"]
keywords = ["vr"]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[features]
static = ["sys/static", "linked"]
loaded = ["shared_library"]
linked = ["sys/prototypes"]
nalgebra = ["sys/nalgebra"]
default = ["loaded"]

[dependencies]
sys = { package = "openxr-sys", path = "../sys", version = "0.4.0" }
libc = "0.2.50"
shared_library = { version = "0.1.9", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["profileapi"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
glium = { version = "0.24.0", default-features = false }
x11 = { version = "2.18.1", features = ["xlib", "glx"] }

[package.metadata.docs.rs]
features = ["linked", "loaded", "nalgebra"]
