[package]
name = "openxr-static"
description = "Helper crate to statically link the Khronos OpenXR loader"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
keywords = ["openxr", "vr"]
license = "MIT/Apache-2.0"
edition = "2018"
links = "openxr_loader"

[build-dependencies]
cmake = "0.1.35"
