[package]
name = "openxr-sys"
description = "OpenXR FFI bindings"
repository = "https://github.com/Ralith/openxrs"
readme = "../README.md"
version = "0.8.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
categories = ["external-ffi-bindings", "rendering"]
keywords = ["openxr", "vr"]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[features]
prototypes = []
static = ["cmake", "prototypes"]

[dependencies]
libc = "0.2.50"
mint = { version = "0.5.3", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["windef", "ntdef", "d3dcommon", "d3d11", "d3d12"] }

[build-dependencies]
cmake = { version = "0.1.35", optional = true }

[package.metadata.docs.rs]
features = ["prototypes", "mint"]
