[package]
name = "openxr-sys"
description = "OpenXR FFI bindings"
repository = "https://github.com/Ralith/openxrs"
readme = "../README.md"
version = "0.9.1"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
categories = ["external-ffi-bindings", "rendering"]
keywords = ["openxr", "vr"]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[features]
linked = []
static = ["cmake", "linked"]

[dependencies]
libc = "0.2.50"
mint = { version = "0.5.3", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19.0"

[build-dependencies]
cmake = { version = "0.1.35", optional = true }

[package.metadata.docs.rs]
features = ["linked", "mint"]
