[package]
name = "openxr-sys"
description = "OpenXR FFI bindings"
repository = "https://github.com/Ralith/openxrs"
readme = "../README.md"
version = "0.13.1"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
categories = ["external-ffi-bindings", "rendering"]
keywords = ["openxr", "vr"]
license = "MIT OR Apache-2.0"
edition = "2024"

links = "openxr_loader"

[badges]
maintenance = { status = "experimental" }

[features]
linked = []
static = ["cmake", "linked"]

[dependencies]
libc = "0.2.50"
mint = { version = "0.5.3", optional = true }

[build-dependencies]
cmake = { version = "0.1.35", optional = true }

[package.metadata.docs.rs]
features = ["linked", "mint"]
